--- a/index.html
+++ b/index.html
@@ -211,10 +211,14 @@
       <input class="form-check-input" type="checkbox" id="local_network" name="local_network">
       <label class="form-check-label" for="local_network">Наличие локальной сети</label>
     </div>
-    <div class="mb-3">
-      <label class="form-label" for="installation_location">Местонахождение установки</label>
-      <input type="text" class="form-control" id="installation_location" name="installation_location">
-    </div>
+<div class="mb-3">
+  <label class="form-label" for="installation_location">Местонахождение установки</label>
+  <input type="text" class="form-control mb-2" id="installation_location" name="installation_location">
+
+  <label class="form-label" for="installation_photo">Загрузите фото местонахождения</label>
+  <input type="file" class="form-control" id="installation_photo" name="installation_photo" accept="image/*" data-html2canvas-ignore="true">
+</div>
+
     <div class="form-check">
       <input class="form-check-input" type="checkbox" id="video_surveillance" name="video_surveillance">
       <label class="form-check-label" for="video_surveillance">Наличие видеонаблюдения</label>
@@ -293,9 +297,13 @@
       <label class="form-check-label" for="local_network">Наличие локальной сети</label>
     </div>
     <div class="mb-3">
-      <label class="form-label" for="installation_location">Местонахождение установки</label>
-      <input type="text" class="form-control" id="installation_location" name="installation_location">
-    </div>
+  <label class="form-label" for="installation_location">Местонахождение установки</label>
+  <input type="text" class="form-control mb-2" id="installation_location" name="installation_location">
+
+  <label class="form-label" for="installation_photo">Загрузите фото местонахождения</label>
+  <input type="file" class="form-control" id="installation_photo" name="installation_photo" accept="image/*" data-html2canvas-ignore="true">
+</div>
+
     <div class="mb-3">
       <label class="form-label" for="water_composition">Состав оборотной воды</label>
       <input type="text" class="form-control" id="water_composition" name="water_composition">
@@ -370,9 +378,13 @@
       <label class="form-check-label" for="local_network">Наличие локальной сети</label>
     </div>
     <div class="mb-3">
-      <label class="form-label" for="installation_location">Местонахождение установки</label>
-      <input type="text" class="form-control" id="installation_location" name="installation_location">
-    </div>
+  <label class="form-label" for="installation_location">Местонахождение установки</label>
+  <input type="text" class="form-control mb-2" id="installation_location" name="installation_location">
+
+  <label class="form-label" for="installation_photo">Загрузите фото местонахождения</label>
+  <input type="file" class="form-control" id="installation_photo" name="installation_photo" accept="image/*" data-html2canvas-ignore="true">
+</div>
+
     <div class="mb-3">
       <label class="form-label" for="water_composition">Состав оборотной воды</label>
       <input type="text" class="form-control" id="water_composition" name="water_composition">
