--- a/index.html
+++ b/index.html
@@ -140,13 +140,16 @@
     <div class="form-check">
       <input class="form-check-input" type="checkbox" id="local_network" name="local_network">
       <label class="form-check-label" for="local_network">Наличие локальной сети</label>
+    <div class="mb-3">
+      <label class="form-label" for="installation_location">Местонахождение установки</label>
+      <input type="text" class="form-control mb-2" id="installation_location" name="installation_location">
+
+      <label class="form-label" for="installation_photo">Загрузите фото местонахождения (JPG, PNG)</label>
+      <input type="file" class="form-control mb-2" id="installation_photo" name="installation_photo" accept=".jpg,.jpeg,.png,image/jpeg,image/png">
+
+      <img id="installation_preview" alt="Превью изображения" style="max-width: 100%; height: auto; display: none; border: 1px solid #ccc; margin-top: 10px;" />
     </div>
-       <div class="mb-3">
-        <label for="location" class="form-label">Местонахождение установки</label>
-        <input type="text" id="location" name="location" class="form-control mb-2">
-        <label for="location_photo" class="form-label">Загрузите фото местонахождения</label>
-        <input type="file" id="location_photo" name="location_photo" class="form-control">
-      </div>
+
     <div class="mb-3">
       <label class="form-label" for="water_composition">Состав оборотной воды</label>
       <input type="text" class="form-control" id="water_composition" name="water_composition">
@@ -211,14 +214,15 @@
       <input class="form-check-input" type="checkbox" id="local_network" name="local_network">
       <label class="form-check-label" for="local_network">Наличие локальной сети</label>
     </div>
-<div class="mb-3">
-  <label class="form-label" for="installation_location">Местонахождение установки</label>
-  <input type="text" class="form-control mb-2" id="installation_location" name="installation_location">
+    <div class="mb-3">
+      <label class="form-label" for="installation_location">Местонахождение установки</label>
+      <input type="text" class="form-control mb-2" id="installation_location" name="installation_location">
 
-  <label class="form-label" for="installation_photo">Загрузите фото местонахождения</label>
-  <input type="file" class="form-control" id="installation_photo" name="installation_photo" accept="image/*" data-html2canvas-ignore="true">
-</div>
+      <label class="form-label" for="installation_photo">Загрузите фото местонахождения (JPG, PNG)</label>
+      <input type="file" class="form-control mb-2" id="installation_photo" name="installation_photo" accept=".jpg,.jpeg,.png,image/jpeg,image/png">
 
+      <img id="installation_preview" alt="Превью изображения" style="max-width: 100%; height: auto; display: none; border: 1px solid #ccc; margin-top: 10px;" />
+    </div>
     <div class="form-check">
       <input class="form-check-input" type="checkbox" id="video_surveillance" name="video_surveillance">
       <label class="form-check-label" for="video_surveillance">Наличие видеонаблюдения</label>
@@ -297,12 +301,15 @@
       <label class="form-check-label" for="local_network">Наличие локальной сети</label>
     </div>
     <div class="mb-3">
-  <label class="form-label" for="installation_location">Местонахождение установки</label>
-  <input type="text" class="form-control mb-2" id="installation_location" name="installation_location">
+      <label class="form-label" for="installation_location">Местонахождение установки</label>
+      <input type="text" class="form-control mb-2" id="installation_location" name="installation_location">
 
-  <label class="form-label" for="installation_photo">Загрузите фото местонахождения</label>
-  <input type="file" class="form-control" id="installation_photo" name="installation_photo" accept="image/*" data-html2canvas-ignore="true">
-</div>
+      <label class="form-label" for="installation_photo">Загрузите фото местонахождения (JPG, PNG)</label>
+      <input type="file" class="form-control mb-2" id="installation_photo" name="installation_photo" accept=".jpg,.jpeg,.png,image/jpeg,image/png">
+
+      <img id="installation_preview" alt="Превью изображения" style="max-width: 100%; height: auto; display: none; border: 1px solid #ccc; margin-top: 10px;" />
+    </div>
+
 
     <div class="mb-3">
       <label class="form-label" for="water_composition">Состав оборотной воды</label>
@@ -378,12 +385,15 @@
       <label class="form-check-label" for="local_network">Наличие локальной сети</label>
     </div>
     <div class="mb-3">
-  <label class="form-label" for="installation_location">Местонахождение установки</label>
-  <input type="text" class="form-control mb-2" id="installation_location" name="installation_location">
+      <label class="form-label" for="installation_location">Местонахождение установки</label>
+      <input type="text" class="form-control mb-2" id="installation_location" name="installation_location">
 
-  <label class="form-label" for="installation_photo">Загрузите фото местонахождения</label>
-  <input type="file" class="form-control" id="installation_photo" name="installation_photo" accept="image/*" data-html2canvas-ignore="true">
-</div>
+      <label class="form-label" for="installation_photo">Загрузите фото местонахождения (JPG, PNG)</label>
+      <input type="file" class="form-control mb-2" id="installation_photo" name="installation_photo" accept=".jpg,.jpeg,.png,image/jpeg,image/png">
+
+      <img id="installation_preview" alt="Превью изображения" style="max-width: 100%; height: auto; display: none; border: 1px solid #ccc; margin-top: 10px;" />
+    </div>
+
 
     <div class="mb-3">
       <label class="form-label" for="water_composition">Состав оборотной воды</label>
