--- a/index.html
+++ b/index.html
@@ -140,15 +140,15 @@
     <div class="form-check">
       <input class="form-check-input" type="checkbox" id="local_network" name="local_network">
       <label class="form-check-label" for="local_network">Наличие локальной сети</label>
-    <div class="mb-3">
-      <label class="form-label" for="installation_location">Местонахождение установки</label>
-      <input type="text" class="form-control mb-2" id="installation_location" name="installation_location">
+ <div class="mb-3">
+    <label class="form-label" for="installation_location_pulp">Местонахождение установки</label>
+    <input type="text" class="form-control mb-2" id="installation_location_pulp" name="installation_location_pulp">
 
-      <label class="form-label" for="installation_photo">Загрузите фото местонахождения (JPG, PNG)</label>
-      <input type="file" class="form-control mb-2" id="installation_photo" name="installation_photo" accept=".jpg,.jpeg,.png,image/jpeg,image/png">
+    <label class="form-label" for="installation_photo_pulp">Загрузите фото местонахождения (JPG, PNG)</label>
+    <input type="file" class="form-control mb-2" id="installation_photo_pulp" name="installation_photo_pulp" accept=".jpg,.jpeg,.png,image/jpeg,image/png">
 
-      <img id="installation_preview" alt="Превью изображения" style="max-width: 100%; height: auto; display: none; border: 1px solid #ccc; margin-top: 10px;" />
-    </div>
+    <img id="installation_preview_pulp" alt="Превью изображения" style="max-width: 100%; height: auto; display: none; border: 1px solid #ccc; margin-top: 10px;" />
+  </div>
 
     <div class="mb-3">
       <label class="form-label" for="water_composition">Состав оборотной воды</label>
@@ -215,14 +215,14 @@
       <label class="form-check-label" for="local_network">Наличие локальной сети</label>
     </div>
     <div class="mb-3">
-      <label class="form-label" for="installation_location">Местонахождение установки</label>
-      <input type="text" class="form-control mb-2" id="installation_location" name="installation_location">
+    <label class="form-label" for="installation_location_sinter">Местонахождение установки</label>
+    <input type="text" class="form-control mb-2" id="installation_location_sinter" name="installation_location_sinter">
 
-      <label class="form-label" for="installation_photo">Загрузите фото местонахождения (JPG, PNG)</label>
-      <input type="file" class="form-control mb-2" id="installation_photo" name="installation_photo" accept=".jpg,.jpeg,.png,image/jpeg,image/png">
+    <label class="form-label" for="installation_photo_sinter">Загрузите фото местонахождения (JPG, PNG)</label>
+    <input type="file" class="form-control mb-2" id="installation_photo_sinter" name="installation_photo_sinter" accept=".jpg,.jpeg,.png,image/jpeg,image/png">
 
-      <img id="installation_preview" alt="Превью изображения" style="max-width: 100%; height: auto; display: none; border: 1px solid #ccc; margin-top: 10px;" />
-    </div>
+    <img id="installation_preview_sinter" alt="Превью изображения" style="max-width: 100%; height: auto; display: none; border: 1px solid #ccc; margin-top: 10px;" />
+  </div>
     <div class="form-check">
       <input class="form-check-input" type="checkbox" id="video_surveillance" name="video_surveillance">
       <label class="form-check-label" for="video_surveillance">Наличие видеонаблюдения</label>
@@ -301,14 +301,14 @@
       <label class="form-check-label" for="local_network">Наличие локальной сети</label>
     </div>
     <div class="mb-3">
-      <label class="form-label" for="installation_location">Местонахождение установки</label>
-      <input type="text" class="form-control mb-2" id="installation_location" name="installation_location">
+    <label class="form-label" for="installation_location_multiplex">Местонахождение установки</label>
+    <input type="text" class="form-control mb-2" id="installation_location_multiplex" name="installation_location_multiplex">
 
-      <label class="form-label" for="installation_photo">Загрузите фото местонахождения (JPG, PNG)</label>
-      <input type="file" class="form-control mb-2" id="installation_photo" name="installation_photo" accept=".jpg,.jpeg,.png,image/jpeg,image/png">
+    <label class="form-label" for="installation_photo_multiplex">Загрузите фото местонахождения (JPG, PNG)</label>
+    <input type="file" class="form-control mb-2" id="installation_photo_multiplex" name="installation_photo_multiplex" accept=".jpg,.jpeg,.png,image/jpeg,image/png">
 
-      <img id="installation_preview" alt="Превью изображения" style="max-width: 100%; height: auto; display: none; border: 1px solid #ccc; margin-top: 10px;" />
-    </div>
+    <img id="installation_preview_multiplex" alt="Превью изображения" style="max-width: 100%; height: auto; display: none; border: 1px solid #ccc; margin-top: 10px;" />
+  </div>
 
 
     <div class="mb-3">
@@ -384,15 +384,15 @@
       <input class="form-check-input" type="checkbox" id="local_network" name="local_network">
       <label class="form-check-label" for="local_network">Наличие локальной сети</label>
     </div>
-    <div class="mb-3">
-      <label class="form-label" for="installation_location">Местонахождение установки</label>
-      <input type="text" class="form-control mb-2" id="installation_location" name="installation_location">
+ <div class="mb-3">
+    <label class="form-label" for="installation_location_courier">Местонахождение установки</label>
+    <input type="text" class="form-control mb-2" id="installation_location_courier" name="installation_location_courier">
 
-      <label class="form-label" for="installation_photo">Загрузите фото местонахождения (JPG, PNG)</label>
-      <input type="file" class="form-control mb-2" id="installation_photo" name="installation_photo" accept=".jpg,.jpeg,.png,image/jpeg,image/png">
+    <label class="form-label" for="installation_photo_courier">Загрузите фото местонахождения (JPG, PNG)</label>
+    <input type="file" class="form-control mb-2" id="installation_photo_courier" name="installation_photo_courier" accept=".jpg,.jpeg,.png,image/jpeg,image/png">
 
-      <img id="installation_preview" alt="Превью изображения" style="max-width: 100%; height: auto; display: none; border: 1px solid #ccc; margin-top: 10px;" />
-    </div>
+    <img id="installation_preview_courier" alt="Превью изображения" style="max-width: 100%; height: auto; display: none; border: 1px solid #ccc; margin-top: 10px;" />
+  </div>
 
 
     <div class="mb-3">
