--- a/index.html
+++ b/index.html
@@ -130,16 +130,16 @@
   <div class="mb-3">
     <h5>Дополнительные условия</h5>
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="xrf_lab" name="xrf_lab">
-      <label class="form-check-label" for="xrf_lab">Наличие РФА-лаборатории на предприятии</label>
+      <input class="form-check-input" type="checkbox" id="xrf_lab_pulp" name="xrf_lab">
+      <label class="form-check-label" for="xrf_lab_pulp">Наличие РФА-лаборатории на предприятии</label>
     </div>
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="personnel_access" name="personnel_access">
-      <label class="form-check-label" for="personnel_access">Допуск персонала к источникам</label>
+      <input class="form-check-input" type="checkbox" id="personnel_access_pulp" name="personnel_access">
+      <label class="form-check-label" for="personnel_access_pulp">Допуск персонала к источникам</label>
     </div>
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="local_network" name="local_network">
-      <label class="form-check-label" for="local_network">Наличие локальной сети</label>
+      <input class="form-check-input" type="checkbox" id="local_network_pulp" name="local_network">
+      <label class="form-check-label" for="local_network_pulp">Наличие локальной сети</label>
  <div class="mb-3">
     <label class="form-label" for="installation_location_pulp">Местонахождение установки</label>
     <input type="text" class="form-control mb-2" id="installation_location_pulp" name="installation_location_pulp">
@@ -151,12 +151,12 @@
   </div>
 
     <div class="mb-3">
-      <label class="form-label" for="water_composition">Состав оборотной воды</label>
-      <input type="text" class="form-control" id="water_composition" name="water_composition">
+      <label class="form-label" for="water_composition_pulp">Состав оборотной воды</label>
+      <input type="text" class="form-control" id="water_composition_pulp" name="water_composition">
     </div>
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="video_surveillance" name="video_surveillance">
-      <label class="form-check-label" for="video_surveillance">Наличие видеонаблюдения</label>
+      <input class="form-check-input" type="checkbox" id="video_surveillance_pulp" name="video_surveillance">
+      <label class="form-check-label" for="video_surveillance_pulp">Наличие видеонаблюдения</label>
     </div>
   </div>
     </div>
@@ -203,16 +203,16 @@
       <div class="mb-3">
     <h5>Дополнительные условия</h5>
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="xrf_lab" name="xrf_lab">
-      <label class="form-check-label" for="xrf_lab">Наличие РФА-лаборатории на предприятии</label>
+      <input class="form-check-input" type="checkbox" id="xrf_lab_sinter" name="xrf_lab">
+      <label class="form-check-label" for="xrf_lab_sinter">Наличие РФА-лаборатории на предприятии</label>
     </div>
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="personnel_access" name="personnel_access">
-      <label class="form-check-label" for="personnel_access">Допуск персонала к источникам</label>
+      <input class="form-check-input" type="checkbox" id="personnel_access_sinter" name="personnel_access">
+      <label class="form-check-label" for="personnel_access_sinter">Допуск персонала к источникам</label>
     </div>
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="local_network" name="local_network">
-      <label class="form-check-label" for="local_network">Наличие локальной сети</label>
+      <input class="form-check-input" type="checkbox" id="local_network_sinter" name="local_network">
+      <label class="form-check-label" for="local_network_sinter">Наличие локальной сети</label>
     </div>
     <div class="mb-3">
     <label class="form-label" for="installation_location_sinter">Местонахождение установки</label>
@@ -224,8 +224,8 @@
     <img id="installation_preview_sinter" alt="Превью изображения" style="max-width: 100%; height: auto; display: none; border: 1px solid #ccc; margin-top: 10px;" />
   </div>
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="video_surveillance" name="video_surveillance">
-      <label class="form-check-label" for="video_surveillance">Наличие видеонаблюдения</label>
+      <input class="form-check-input" type="checkbox" id="video_surveillance_sinter" name="video_surveillance">
+      <label class="form-check-label" for="video_surveillance_sinter">Наличие видеонаблюдения</label>
     </div>
 </div>
 </div> 
@@ -289,16 +289,16 @@
   <div class="mb-3">
     <h5>Дополнительные условия</h5>
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="xrf_lab" name="xrf_lab">
-      <label class="form-check-label" for="xrf_lab">Наличие РФА-лаборатории на предприятии</label>
+      <input class="form-check-input" type="checkbox" id="xrf_lab_multiplex" name="xrf_lab">
+      <label class="form-check-label" for="xrf_lab_multiplex">Наличие РФА-лаборатории на предприятии</label>
     </div>
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="personnel_access" name="personnel_access">
-      <label class="form-check-label" for="personnel_access">Допуск персонала к источникам</label>
+      <input class="form-check-input" type="checkbox" id="personnel_access_multiplex" name="personnel_access">
+      <label class="form-check-label" for="personnel_access_multiplex">Допуск персонала к источникам</label>
     </div>
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="local_network" name="local_network">
-      <label class="form-check-label" for="local_network">Наличие локальной сети</label>
+      <input class="form-check-input" type="checkbox" id="local_network_multiplex" name="local_network">
+      <label class="form-check-label" for="local_network_multiplex">Наличие локальной сети</label>
     </div>
     <div class="mb-3">
     <label class="form-label" for="installation_location_multiplex">Местонахождение установки</label>
@@ -312,12 +312,12 @@
 
 
     <div class="mb-3">
-      <label class="form-label" for="water_composition">Состав оборотной воды</label>
-      <input type="text" class="form-control" id="water_composition" name="water_composition">
+      <label class="form-label" for="water_composition_multiplex">Состав оборотной воды</label>
+      <input type="text" class="form-control" id="water_composition_multiplex" name="water_composition">
     </div>
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="video_surveillance" name="video_surveillance">
-      <label class="form-check-label" for="video_surveillance">Наличие видеонаблюдения</label>
+      <input class="form-check-input" type="checkbox" id="video_surveillance_multiplex" name="video_surveillance">
+      <label class="form-check-label" for="video_surveillance_multiplex">Наличие видеонаблюдения</label>
     </div>
   </div>
 </div>
@@ -373,16 +373,16 @@
     <div class="mb-3">
     <h5>Дополнительные условия</h5>
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="xrf_lab" name="xrf_lab">
-      <label class="form-check-label" for="xrf_lab">Наличие РФА-лаборатории на предприятии</label>
+      <input class="form-check-input" type="checkbox" id="xrf_lab_courier" name="xrf_lab">
+      <label class="form-check-label" for="xrf_lab_courier">Наличие РФА-лаборатории на предприятии</label>
     </div>
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="personnel_access" name="personnel_access">
-      <label class="form-check-label" for="personnel_access">Допуск персонала к источникам</label>
+      <input class="form-check-input" type="checkbox" id="personnel_access_courier" name="personnel_access">
+      <label class="form-check-label" for="personnel_access_courier">Допуск персонала к источникам</label>
     </div>
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="local_network" name="local_network">
-      <label class="form-check-label" for="local_network">Наличие локальной сети</label>
+      <input class="form-check-input" type="checkbox" id="local_network_courier" name="local_network">
+      <label class="form-check-label" for="local_network_courier">Наличие локальной сети</label>
     </div>
  <div class="mb-3">
     <label class="form-label" for="installation_location_courier">Местонахождение установки</label>
@@ -396,12 +396,12 @@
 
 
     <div class="mb-3">
-      <label class="form-label" for="water_composition">Состав оборотной воды</label>
-      <input type="text" class="form-control" id="water_composition" name="water_composition">
+      <label class="form-label" for="water_composition_courier">Состав оборотной воды</label>
+      <input type="text" class="form-control" id="water_composition_courier" name="water_composition">
     </div>
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="video_surveillance" name="video_surveillance">
-      <label class="form-check-label" for="video_surveillance">Наличие видеонаблюдения</label>
+      <input class="form-check-input" type="checkbox" id="video_surveillance_courier" name="video_surveillance">
+      <label class="form-check-label" for="video_surveillance_courier">Наличие видеонаблюдения</label>
     </div>
   </div>
     </div>
