--- a/index.html
+++ b/index.html
@@ -417,73 +417,52 @@
 <script>
 
   document.addEventListener("DOMContentLoaded", function () {
-  const materialSelect = document.getElementById("material");
+    const materialSelect = document.getElementById("material");
 
-  function showAnalyzerSection(value) {
-    document.querySelectorAll('.analyzer-section').forEach(section => {
-      section.style.display = 'none';
-    });
-    if (value) {
-      const section = document.getElementById(`section-${value}`);
-      if (section) section.style.display = 'block';
-    }
-  }
-
-  materialSelect.addEventListener("change", function () {
-    showAnalyzerSection(this.value);
-  });
-
-  // Показываем сразу при загрузке, если уже выбрано
-  showAnalyzerSection(materialSelect.value);
-});
-
-  
-function bindPhotoPreview(section) {
-  const input = document.getElementById(`installation_photo_${section}`);
-  const preview = document.getElementById(`installation_preview_${section}`);
-
-  if (!input || !preview) return;
-
-  input.addEventListener("change", function () {
-    const file = this.files[0];
-
-    if (!file || !file.type.startsWith("image/")) {
-      alert("Загрузите файл формата JPG или PNG.");
-      preview.src = "";
-      preview.style.display = "none";
-      return;
+    function showAnalyzerSection(value) {
+      console.log("Выбран материал:", value);
+      document.querySelectorAll('.analyzer-section').forEach(section => {
+        section.style.display = 'none';
+      });
+      if (value) {
+        const section = document.getElementById(`section-${value}`);
+        if (section) {
+          section.style.display = 'block';
+        }
+      }
     }
 
-    const reader = new FileReader();
-    reader.onload = function (e) {
-      preview.src = e.target.result;
-      preview.style.display = "block";
-    };
-    reader.readAsDataURL(file);
-  });
-}
-
-["pulp", "sinter", "multiplex", "courier"].forEach(bindPhotoPreview);
-
-function showAnalyzerSection(value) {
-  document.querySelectorAll('.analyzer-section').forEach(section => {
-    section.style.display = 'none';
-  });
-  if (value) {
-    const section = document.getElementById(`section-${value}`);
-    if (section) section.style.display = 'block';
-  }
-}
-
-document.addEventListener("DOMContentLoaded", function () {
-  const materialSelect = document.getElementById("material");
-  if (materialSelect) {
     materialSelect.addEventListener("change", function () {
       showAnalyzerSection(this.value);
     });
+
     showAnalyzerSection(materialSelect.value);
-  }
-});
+
+    // Привязка превью изображений
+    ["pulp", "sinter", "multiplex", "courier"].forEach(function (section) {
+      const input = document.getElementById(`installation_photo_${section}`);
+      const preview = document.getElementById(`installation_preview_${section}`);
+      if (input && preview) {
+        input.addEventListener("change", function () {
+          const file = this.files[0];
+          if (!file || !file.type.startsWith("image/")) {
+            alert("Загрузите файл формата JPG или PNG.");
+            preview.src = "";
+            preview.style.display = "none";
+            return;
+          }
+          const reader = new FileReader();
+          reader.onload = function (e) {
+            preview.src = e.target.result;
+            preview.style.display = "block";
+          };
+          reader.readAsDataURL(file);
+        });
+      }
+    });
+  });
+
+
 
 function submitForm() {
   const form = document.getElementById("form");
